fixed white space

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+html {
+  margin: 0;
+}
+
 .background-image-section {
   background: 
     linear-gradient(rgba(255, 255, 255, 0.25),
